--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "echo \"(optional) add eslint later\"",
     "server": "node server/api.js",
-    "start": "node server/api.js"     // ✅ Render/Heroku 部署时用
+    "start": "node server/api.js"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
