--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  command = "npm ci && npm run build"
+  command = "npm install --no-audit --no-fund && npm run build"
   publish = "dist"
 
-# SPA 路由回退，解决空白页/404
+# Vue/Vite 单页应用：所有路由回退到 index.html
 [[redirects]]
   from = "/*"
   to = "/index.html"
